internal/xds/translator/testdata/out/xds-ir-sublinear/http3.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/https-wildcard
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/https-foo
  virtualHosts:
  - domains:
    - foo.example.com
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: https-foo
    name: envoy-gateway/gateway-1/https-foo/foo_example_com
    routes:
    - match:
        prefix: /
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: HTTPRoute
              name: httproute-1
              namespace: default
      name: httproute/default/httproute-1/rule/0/match/0/foo_example_com
      responseHeadersToAdd:
      - append: true
        header:
          key: alt-svc
          value: h3=":443"; ma=86400
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/https-bar
  virtualHosts:
  - domains:
    - bar.example.com
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: https-bar
    name: envoy-gateway/gateway-1/https-bar/bar_example_com
    routes:
    - match:
        prefix: /
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: HTTPRoute
              name: httproute-1
              namespace: default
      name: httproute/default/httproute-1/rule/0/match/0/bar_example_com
      responseHeadersToAdd:
      - append: true
        header:
          key: alt-svc
          value: h3=":443"; ma=86400
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
